terraform/vDS/segment-bastion/iptables-rules
*filter
:INPUT ACCEPT [18:1278]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [9:1352]
-A FORWARD -i ens224 -j ACCEPT
-A FORWARD -o ens224 -j ACCEPT
-A FORWARD -i ens192 -j ACCEPT
-A FORWARD -o ens192 -j ACCEPT
-A INPUT -i ens192 -p udp -m udp --sport 67:68 --dport 67:68 -j DROP
-A INPUT -i ens224 -p udp -m udp --sport 67:68 --dport 67:68 -j ACCEPT
COMMIT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o ens192 -j MASQUERADE
-A POSTROUTING -o ens224 -j MASQUERADE
COMMIT
